--- a/pyGame_06.ipynb
+++ b/pyGame_06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1e4ec108",
    "metadata": {},
    "outputs": [],
@@ -20,9 +20,14 @@
     "\n",
     "#3. 게임 화면 내 설정 -> 변수\n",
     "clock = pygame.time.Clock()\n",
-    "black = (0, 0, 0)\n",
-    "grey = (100, 100, 100)\n",
     "\n",
+    "black = (0, 0, 0)\n",
+    "player = pygame.image.load(\"C:/Users/Administrator/Pictures/pygame/player.png\").convert_alpha()\n",
+    "player = pygame.transform.scale(player, (50, 80))\n",
+    "\n",
+    "player_width, player_height = player.get_size()\n",
+    "player_x = round(size[0] / 2) - round(player_width / 2)\n",
+    "player_y = size[1] - player_height - 50\n",
     "k = 0\n",
     "\n",
     "#4. 메인이벤트\n",
@@ -30,7 +35,7 @@
     "\n",
     "while(system_exit == 0):\n",
     "    # 4 - 1) FPS(Frame Per Second) 설정\n",
-    "    clock.tick(10)\n",
+    "    clock.tick(60)\n",
     "    \n",
     "    # 4 - 2) 입력(키보드, 마우스) 감지\n",
     "    for event in pygame.event.get():\n",
@@ -39,13 +44,10 @@
     "    \n",
     "    # 4 - 3) 변화 (입력 / 시간에 따른 변화)\n",
     "    k += 1\n",
-    "    if k % 2 ==0:\n",
-    "        color = black\n",
-    "    else:\n",
-    "        color = grey\n",
-    "        \n",
+    "    \n",
     "    # 4 - 4) 전사작업(그리기)\n",
-    "    screen.fill(color)\n",
+    "    screen.fill(black)\n",
+    "    screen.blit(player, (player_x,player_y))\n",
     "    \n",
     "    # 4 - 5) 업데이트\n",
     "    pygame.display.flip()\n",
