--- a/pyGame_06.ipynb
+++ b/pyGame_06.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "1e4ec108",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.5.0 (SDL 2.28.0, Python 3.10.9)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import pygame\n",
     "\n",
@@ -16,18 +25,44 @@
     "size = [400, 900]\n",
     "screen = pygame.display.set_mode(size)\n",
     "title = \"Using PyGame\"\n",
+    "\n",
     "pygame.display.set_caption(title)\n",
     "\n",
     "#3. 게임 화면 내 설정 -> 변수\n",
     "clock = pygame.time.Clock()\n",
     "\n",
-    "black = (0, 0, 0)\n",
-    "player = pygame.image.load(\"C:/Users/Administrator/Pictures/pygame/player.png\").convert_alpha()\n",
-    "player = pygame.transform.scale(player, (50, 80))\n",
+    "class Object:\n",
+    "    def __init__(self):\n",
+    "        self.x = 0\n",
+    "        self.y = 0\n",
+    "    \n",
+    "    def add_img(self, address):\n",
+    "        if address[-3:] == 'png':\n",
+    "            self.image = pygame.image.load(address).convert_alpha()\n",
+    "        else:\n",
+    "            self.image = pygame.image.load(address)\n",
+    "    \n",
+    "    def change_size(self, width, height):\n",
+    "        self.image = pygame.transform.scale(self.image, (width, height))\n",
+    "        self.width, self.height = self.image.get_size()\n",
+    "        \n",
+    "    def show(self):\n",
+    "        screen.blit(self.image, (self.x, self.y))\n",
+    "        \n",
+    "player = Object()\n",
+    "player.add_img(\"C:/Users/Administrator/Pictures/pygame/player.png\")\n",
+    "player.change_size(50, 80)\n",
+    "player.x = round(size[0] / 2) - round(player.width / 2)\n",
+    "player.y = size[1] - player.height - 50\n",
     "\n",
-    "player_width, player_height = player.get_size()\n",
-    "player_x = round(size[0] / 2) - round(player_width / 2)\n",
-    "player_y = size[1] - player_height - 50\n",
+    "black = (0, 0, 0)\n",
+    "\n",
+    "#player = pygame.image.load(\"C:/Users/Administrator/Pictures/pygame/player.png\").convert_alpha()\n",
+    "#player = pygame.transform.scale(player, (50, 80))\n",
+    "#player_width, player_height = player.get_size()\n",
+    "#player_x = round(size[0] / 2) - round(player_width / 2)\n",
+    "#player_y = size[1] - player_height - 50\n",
+    "\n",
     "k = 0\n",
     "\n",
     "#4. 메인이벤트\n",
@@ -47,7 +82,8 @@
     "    \n",
     "    # 4 - 4) 전사작업(그리기)\n",
     "    screen.fill(black)\n",
-    "    screen.blit(player, (player_x,player_y))\n",
+    "    #screen.blit(player, (player_x,player_y))\n",
+    "    player.show()\n",
     "    \n",
     "    # 4 - 5) 업데이트\n",
     "    pygame.display.flip()\n",
