--- a/pyGame_06.ipynb
+++ b/pyGame_06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "1e4ec108",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pygame 2.5.0 (SDL 2.28.0, Python 3.10.9)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+      "1073741904\n",
+      "1073741904\n",
+      "1073741904\n",
+      "1073741904\n",
+      "1073741904\n"
      ]
     }
    ],
@@ -56,13 +59,6 @@
     "player.y = size[1] - player.height - 50\n",
     "\n",
     "black = (0, 0, 0)\n",
-    "\n",
-    "#player = pygame.image.load(\"C:/Users/Administrator/Pictures/pygame/player.png\").convert_alpha()\n",
-    "#player = pygame.transform.scale(player, (50, 80))\n",
-    "#player_width, player_height = player.get_size()\n",
-    "#player_x = round(size[0] / 2) - round(player_width / 2)\n",
-    "#player_y = size[1] - player_height - 50\n",
-    "\n",
     "k = 0\n",
     "\n",
     "#4. 메인이벤트\n",
@@ -76,6 +72,10 @@
     "    for event in pygame.event.get():\n",
     "        if event.type == pygame.QUIT:\n",
     "            system_exit = 1\n",
+    "        if event.type == pygame.KEYDOWN:\n",
+    "            if event.key == pygame.K_LEFT:\n",
+    "                print(pygame.K_LEFT)\n",
+    "            #print(pygame.K_LEFT)\n",
     "    \n",
     "    # 4 - 3) 변화 (입력 / 시간에 따른 변화)\n",
     "    k += 1\n",
