--- a/pyGame_06.ipynb
+++ b/pyGame_06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "1e4ec108",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,496 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1073741904\n",
-      "1073741904\n",
-      "1073741903\n",
-      "1073741903\n"
+      "2392\n",
+      "2393\n",
+      "2394\n",
+      "2395\n",
+      "2396\n",
+      "2397\n",
+      "2398\n",
+      "2399\n",
+      "2400\n",
+      "2401\n",
+      "2402\n",
+      "2403\n",
+      "2404\n",
+      "2405\n",
+      "2406\n",
+      "2407\n",
+      "2408\n",
+      "2409\n",
+      "2410\n",
+      "2411\n",
+      "2412\n",
+      "2413\n",
+      "2414\n",
+      "2415\n",
+      "2416\n",
+      "2417\n",
+      "2418\n",
+      "2419\n",
+      "2420\n",
+      "2421\n",
+      "2422\n",
+      "2423\n",
+      "2424\n",
+      "2425\n",
+      "2426\n",
+      "2427\n",
+      "2428\n",
+      "2429\n",
+      "2430\n",
+      "2431\n",
+      "2432\n",
+      "2433\n",
+      "2434\n",
+      "2435\n",
+      "2436\n",
+      "2437\n",
+      "2438\n",
+      "2439\n",
+      "2440\n",
+      "2441\n",
+      "2442\n",
+      "2443\n",
+      "2444\n",
+      "2445\n",
+      "2446\n",
+      "32\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "32\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "32\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "32\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "32\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "32\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "32\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "32\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n",
+      "100\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "105\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "116\n",
+      "117\n",
+      "118\n",
+      "119\n",
+      "120\n",
+      "121\n",
+      "122\n",
+      "123\n",
+      "124\n",
+      "125\n",
+      "126\n",
+      "127\n",
+      "128\n",
+      "129\n",
+      "130\n",
+      "131\n",
+      "132\n",
+      "133\n",
+      "134\n",
+      "135\n",
+      "136\n",
+      "137\n",
+      "138\n",
+      "139\n",
+      "140\n",
+      "141\n",
+      "142\n",
+      "143\n",
+      "144\n",
+      "145\n",
+      "146\n",
+      "147\n",
+      "148\n",
+      "149\n",
+      "150\n",
+      "151\n",
+      "152\n",
+      "153\n",
+      "154\n",
+      "155\n",
+      "156\n",
+      "32\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "32\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "32\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "32\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "32\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "32\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n"
      ]
     }
    ],
@@ -37,6 +523,7 @@
     "    def __init__(self):\n",
     "        self.x = 0\n",
     "        self.y = 0\n",
+    "        self.distance = 0\n",
     "    \n",
     "    def add_img(self, address):\n",
     "        if address[-3:] == 'png':\n",
@@ -56,14 +543,15 @@
     "player.change_size(50, 80)\n",
     "player.x = round(size[0] / 2) - round(player.width / 2)\n",
     "player.y = size[1] - player.height - 50\n",
-    "player.distance = 5\n",
+    "player.distance = 10\n",
     "\n",
     "left_move = False\n",
     "right_move = False\n",
+    "space_move = False\n",
     "\n",
     "black = (0, 0, 0)\n",
+    "rocket_list = []\n",
     "\n",
-    "k = 0\n",
     "\n",
     "#4. 메인이벤트\n",
     "system_exit = 0\n",
@@ -87,6 +575,10 @@
     "                #player.x += player.move\n",
     "                print(pygame.K_RIGHT)\n",
     "            #print(pygame.K_LEFT)\n",
+    "            if event.key == pygame.K_SPACE:\n",
+    "                space_move = True\n",
+    "                print(pygame.K_SPACE)\n",
+    "                k = 0\n",
     "        \n",
     "        elif event.type == pygame.KEYUP:\n",
     "            if event.key == pygame.K_LEFT:\n",
@@ -97,9 +589,11 @@
     "                right_move = False\n",
     "                #player.x == 0\n",
     "                print(pygame.K_RIGHT)\n",
+    "            if event.key == pygame.K_SPACE:\n",
+    "                space_move = False\n",
+    "                print(pygame.K_SPACE)\n",
     "    \n",
     "    # 4 - 3) 변화 (입력 / 시간에 따른 변화)\n",
-    "    k += 1\n",
     "    \n",
     "    if left_move == True:\n",
     "        player.x -= player.distance\n",
@@ -109,11 +603,41 @@
     "        player.x += player.distance\n",
     "        if player.x >= size[0] - player.width:\n",
     "            player.x = size[0] - player.width\n",
+    "            \n",
+    "    if space_move == True and k % 6 == 0:\n",
+    "        rocket = Object()\n",
+    "        rocket.add_img(\"C:/Users/Administrator/Pictures/pygame/rocket.png\")\n",
+    "        rocket.change_size(10, 20)\n",
+    "        rocket.x = round(player.x + player.width / 2 - rocket.width / 2)\n",
+    "        rocket.y = player.y - rocket.height - 10\n",
+    "        rocket.distance = 17\n",
+    "        rocket_list.append(rocket)\n",
+    "    \n",
+    "    k += 1\n",
+    "    print(k)\n",
+    "    \n",
+    "    delete_list = []\n",
+    "    for i in range(len(rocket_list)):\n",
+    "        r = rocket_list[i]\n",
+    "        r.y -= r.distance\n",
+    "        if r.y <= -r.height:\n",
+    "            delete_list.append(r)\n",
+    "    \n",
+    "    try:\n",
+    "        delete_list.reverse()\n",
+    "        for d in delete_list:\n",
+    "            del rocket_list[d]        \n",
+    "    except:\n",
+    "        pass\n",
+    "            \n",
     "    \n",
     "    # 4 - 4) 전사작업(그리기)\n",
     "    screen.fill(black)\n",
     "    #screen.blit(player, (player_x,player_y))\n",
     "    player.show()\n",
+    "    \n",
+    "    for r in rocket_list:\n",
+    "        r.show()\n",
     "    \n",
     "    # 4 - 5) 업데이트\n",
     "    pygame.display.flip()\n",
