pyGame enemy 추가, 충돌 판정

--- a/pyGame_06.ipynb
+++ b/pyGame_06.ipynb
@@ -2,515 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "1e4ec108",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2392\n",
-      "2393\n",
-      "2394\n",
-      "2395\n",
-      "2396\n",
-      "2397\n",
-      "2398\n",
-      "2399\n",
-      "2400\n",
-      "2401\n",
-      "2402\n",
-      "2403\n",
-      "2404\n",
-      "2405\n",
-      "2406\n",
-      "2407\n",
-      "2408\n",
-      "2409\n",
-      "2410\n",
-      "2411\n",
-      "2412\n",
-      "2413\n",
-      "2414\n",
-      "2415\n",
-      "2416\n",
-      "2417\n",
-      "2418\n",
-      "2419\n",
-      "2420\n",
-      "2421\n",
-      "2422\n",
-      "2423\n",
-      "2424\n",
-      "2425\n",
-      "2426\n",
-      "2427\n",
-      "2428\n",
-      "2429\n",
-      "2430\n",
-      "2431\n",
-      "2432\n",
-      "2433\n",
-      "2434\n",
-      "2435\n",
-      "2436\n",
-      "2437\n",
-      "2438\n",
-      "2439\n",
-      "2440\n",
-      "2441\n",
-      "2442\n",
-      "2443\n",
-      "2444\n",
-      "2445\n",
-      "2446\n",
-      "32\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "32\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "32\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "32\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "32\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "32\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "32\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "32\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "82\n",
-      "83\n",
-      "84\n",
-      "85\n",
-      "86\n",
-      "87\n",
-      "88\n",
-      "89\n",
-      "90\n",
-      "91\n",
-      "92\n",
-      "93\n",
-      "94\n",
-      "95\n",
-      "96\n",
-      "97\n",
-      "98\n",
-      "99\n",
-      "100\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "105\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "116\n",
-      "117\n",
-      "118\n",
-      "119\n",
-      "120\n",
-      "121\n",
-      "122\n",
-      "123\n",
-      "124\n",
-      "125\n",
-      "126\n",
-      "127\n",
-      "128\n",
-      "129\n",
-      "130\n",
-      "131\n",
-      "132\n",
-      "133\n",
-      "134\n",
-      "135\n",
-      "136\n",
-      "137\n",
-      "138\n",
-      "139\n",
-      "140\n",
-      "141\n",
-      "142\n",
-      "143\n",
-      "144\n",
-      "145\n",
-      "146\n",
-      "147\n",
-      "148\n",
-      "149\n",
-      "150\n",
-      "151\n",
-      "152\n",
-      "153\n",
-      "154\n",
-      "155\n",
-      "156\n",
-      "32\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "32\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "32\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "32\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "32\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "32\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
+    "import random\n",
+    "import time\n",
     "\n",
     "#1. 초기화 -> 변수선언\n",
     "pygame.init()\n",
     "\n",
     "#2. 게임화면 설정 -> 크기 고정\n",
-    "size = [400, 900]\n",
+    "size = [400, 900] #화면 크기 (좌측 상단 좌표 (0,0))\n",
     "screen = pygame.display.set_mode(size)\n",
     "title = \"Using PyGame\"\n",
     "\n",
@@ -537,6 +42,17 @@
     "        \n",
     "    def show(self):\n",
     "        screen.blit(self.image, (self.x, self.y))\n",
+    "\n",
+    "#a.x - b.width <= b.x <= a.x + a.width\n",
+    "#a.y - b.height <= b.y <= a.y + a.height\n",
+    "def crash(a,b):\n",
+    "    if (a.x - b.width <= b.x) and (b.x <= a.x + a.width):\n",
+    "        if (a.y - b.height <= b.y) and (b.y <= a.y + a.height):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return False\n",
     "        \n",
     "player = Object()\n",
     "player.add_img(\"C:/Users/Administrator/Pictures/pygame/player.png\")\n",
@@ -551,7 +67,10 @@
     "\n",
     "black = (0, 0, 0)\n",
     "rocket_list = []\n",
+    "enemy_list = []\n",
     "\n",
+    "#미사일 주석\n",
+    "k = 0\n",
     "\n",
     "#4. 메인이벤트\n",
     "system_exit = 0\n",
@@ -568,30 +87,19 @@
     "        if event.type == pygame.KEYDOWN:\n",
     "            if event.key == pygame.K_LEFT:\n",
     "                left_move = True\n",
-    "                #player.x -= player.move\n",
-    "                print(pygame.K_LEFT)\n",
     "            if event.key == pygame.K_RIGHT:\n",
     "                right_move = True\n",
-    "                #player.x += player.move\n",
-    "                print(pygame.K_RIGHT)\n",
-    "            #print(pygame.K_LEFT)\n",
     "            if event.key == pygame.K_SPACE:\n",
     "                space_move = True\n",
-    "                print(pygame.K_SPACE)\n",
     "                k = 0\n",
     "        \n",
     "        elif event.type == pygame.KEYUP:\n",
     "            if event.key == pygame.K_LEFT:\n",
     "                left_move = False\n",
-    "                #player.x == 0\n",
-    "                print(pygame.K_LEFT)\n",
     "            if event.key == pygame.K_RIGHT:\n",
     "                right_move = False\n",
-    "                #player.x == 0\n",
-    "                print(pygame.K_RIGHT)\n",
     "            if event.key == pygame.K_SPACE:\n",
     "                space_move = False\n",
-    "                print(pygame.K_SPACE)\n",
     "    \n",
     "    # 4 - 3) 변화 (입력 / 시간에 따른 변화)\n",
     "    \n",
@@ -614,7 +122,6 @@
     "        rocket_list.append(rocket)\n",
     "    \n",
     "    k += 1\n",
-    "    print(k)\n",
     "    \n",
     "    delete_list = []\n",
     "    for i in range(len(rocket_list)):\n",
@@ -629,7 +136,61 @@
     "            del rocket_list[d]        \n",
     "    except:\n",
     "        pass\n",
-    "            \n",
+    "    \n",
+    "    if random.random() > 0.98:\n",
+    "        enemy = Object()\n",
+    "        enemy.add_img(\"C:/Users/Administrator/Pictures/pygame/enemy.png\")\n",
+    "        enemy.change_size(40 , 40)\n",
+    "        enemy.x = random.randrange(0, size[0] - enemy.width - round(player.width / 2))\n",
+    "        enemy.y = 15\n",
+    "        enemy.distance = 5\n",
+    "        enemy_list.append(enemy)\n",
+    "        \n",
+    "    for i in range(len(enemy_list)):\n",
+    "        e = enemy_list[i]\n",
+    "        e.y += e.distance\n",
+    "        if e.y <= -e.height:\n",
+    "            delete_list.append(e)\n",
+    "    \n",
+    "    try:\n",
+    "        delete_list.reverse()\n",
+    "        for d in delete_list:\n",
+    "            del enemy_list[d]\n",
+    "            miss += 1\n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "    delete_rocket_list = []\n",
+    "    delete_enemy_list = []\n",
+    "    for i in range(len(rocket_list)): #적과 로켓 충돌 파악 - 어떤 객체 끼리 충돌했는지\n",
+    "        for j in range(len(enemy_list)):\n",
+    "            r = rocket_list[i]\n",
+    "            e = enemy_list[j]\n",
+    "            if crash(r,e) == True:\n",
+    "                delete_rocket_list.append(i)\n",
+    "                delete_enemy_list.append(j)\n",
+    "    \n",
+    "    delete_rocket_list = list(set(delete_rocket_list)) #중복 제거\n",
+    "    delete_enemy_list = list(set(delete_enemy_list))\n",
+    "    \n",
+    "    try:\n",
+    "        delete_rocket_list.reverse()\n",
+    "        delete_enemy_list.reverse()\n",
+    "    \n",
+    "        for dr in delete_rocket_list:\n",
+    "            del rocket_list[dr]\n",
+    "        for dr in delete_enemy_list:\n",
+    "            del enemy_list[de]\n",
+    "    \n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "    for i in range(len(enemy_list)):\n",
+    "        e = enemy_list[i]\n",
+    "        if crash(e, player) == True:\n",
+    "            system_exist = 1\n",
+    "            time.sleep(1)\n",
+    "        \n",
     "    \n",
     "    # 4 - 4) 전사작업(그리기)\n",
     "    screen.fill(black)\n",
@@ -638,6 +199,9 @@
     "    \n",
     "    for r in rocket_list:\n",
     "        r.show()\n",
+    "        \n",
+    "    for e in enemy_list:\n",
+    "        e.show()\n",
     "    \n",
     "    # 4 - 5) 업데이트\n",
     "    pygame.display.flip()\n",
